[package]
name = "lazyvim-helper"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI tool for LazyVim keyboard shortcuts visualization"
authors = ["Caio"]
license = "MIT"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
anyhow = "1.0"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
